initial structure of html

--- a/starter/index.html
+++ b/starter/index.html
@@ -10,9 +10,16 @@
 
   <body>
     <!-- main logo / nav -->
-    <header>
+    <header class="header">
       <h1>Lernantino</h1>
-      <nav></nav>
+      <nav>
+        <ul>
+          <li>About Me</li>
+          <li>Work</li>
+          <li>Contact Me</li>
+          <li>Resume</li>
+        </ul>
+      </nav>
     </header>
 
     <!-- hero banner -->
