--- a/starter/index.html
+++ b/starter/index.html
@@ -36,9 +36,7 @@
           <h2>About Me</h2>
         </div>
       </section>
-      <section class="page-section" id="about">
-        <h2>About Me</h2>
-      </section>
+      <section class="page-section" id="about"></section>
 
       <!-- portfolio container -->
       <section class="work-heading">
@@ -48,7 +46,13 @@
       </section>
 
       <section class="page-section" id="work">
-        <h2>Work</h2>
+        <div class="work-content">
+          <div class="project-1">Project-1</div>
+          <div class="project-2">Project-2</div>
+          <div class="project-3">Project-3</div>
+          <div class="project-4">Project-4</div>
+          <div class="project-5">Project-5</div>
+        </div>
       </section>
 
       <!-- contact -->
@@ -57,9 +61,7 @@
           <h2>Contact Me</h2>
         </div>
       </section>
-      <section class="page-section-contact" id="contact">
-        <h2>Contact Me</h2>
-      </section>
+      <section class="page-section-contact" id="contact"></section>
     </main>
   </body>
 </html>
