added contact me paragraph elements

--- a/starter/index.html
+++ b/starter/index.html
@@ -61,7 +61,12 @@
           <h2>Contact Me</h2>
         </div>
       </section>
-      <section class="page-section-contact" id="contact"></section>
+      <section class="page-section-contact" id="contact">
+        <p>Tel:</p>
+        <p>email</p>
+        <p>Github</p>
+        <p>Twitter</p>
+      </section>
     </main>
   </body>
 </html>
