changed layout and structure of html code to a more consistent layout as previous html was not working correctly when trying to make responsive

--- a/starter/index.html
+++ b/starter/index.html
@@ -24,48 +24,50 @@
 
     <!-- hero banner -->
     <section class="hero-banner">
-      <div>
+      <div class="hero-banner-title">
         <h2>Cool subtitle here!</h2>
       </div>
     </section>
 
     <main class="page-wrapper">
       <!-- about me -->
-      <section class="about-heading">
-        <div>
-          <h2>About Me</h2>
+      <section class="page-section" id="about">
+        <div class="grid-subheading"><h2>About Me</h2></div>
+        <div class="content-areas" id="about-content-area">
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex
+            blanditiis distinctio a error exercitationem minus. Et aliquid
+            tempora rem illum suscipit repudiandae ducimus natus ipsum dolorum
+            sunt distinctio, labore provident.
+          </p>
         </div>
       </section>
-      <section class="page-section" id="about"></section>
 
       <!-- portfolio container -->
-      <section class="work-heading">
-        <div>
-          <h2>Work</h2>
-        </div>
-      </section>
-
       <section class="page-section" id="work">
-        <div class="work-content">
-          <div class="project-1">Project-1</div>
-          <div class="project-2">Project-2</div>
-          <div class="project-3">Project-3</div>
-          <div class="project-4">Project-4</div>
-          <div class="project-5">Project-5</div>
+        <div class="grid-subheading"><h2>Work</h2></div>
+        <div class="content-areas">
+          <div class="work-content">
+            <div class="project-1 project-grid-styles">Project-1</div>
+            <div class="project-2 project-grid-styles">Project-2</div>
+            <div class="project-3 project-grid-styles">Project-3</div>
+            <div class="project-4 project-grid-styles">Project-4</div>
+            <div class="project-5 project-grid-styles">Project-5</div>
+          </div>
         </div>
       </section>
 
       <!-- contact -->
-      <section class="contact-heading">
-        <div>
-          <h2>Contact Me</h2>
+      <section class="page-section" id="contact">
+        <div class="grid-subheading"><h2>Contact Me</h2></div>
+        <div class="content-areas" id="contact-content-area">
+          <div class="contact-links">
+            <p>Tel: 07852736704</p>
+            <p>Email: onalserkan@gmail.com</p>
+            <p>Github</p>
+            <p>Twitter</p>
+          </div>
         </div>
-      </section>
-      <section class="page-section-contact" id="contact">
-        <p>Tel:</p>
-        <p>email</p>
-        <p>Github</p>
-        <p>Twitter</p>
       </section>
     </main>
   </body>
