--- a/starter/index.html
+++ b/starter/index.html
@@ -12,7 +12,7 @@
     <!-- main logo / nav -->
     <header class="header">
       <nav class="nav-bar">
-        <h1>Lernantino</h1>
+        <h1>Serkan Onal Portfolio</h1>
         <div class="nav-links">
           <p><a href="#about">About Me</a></p>
           <p><a href="#work">Work</a></p>
@@ -24,14 +24,18 @@
 
     <!-- hero banner -->
     <section class="hero-banner">
+      <div class="profile-pic">
+        <img src="./images/SerkanCircleImg.png" alt="" />
+      </div>
       <div class="hero-banner-title">
-        <h2>Cool subtitle here!</h2>
+        <h2>Find Out More Below!</h2>
       </div>
     </section>
 
     <main class="page-wrapper">
       <!-- about me -->
       <section class="page-section" id="about">
+        <!-- <h2 class="grid-subheading">About Me</h2> -->
         <div class="grid-subheading"><h2>About Me</h2></div>
         <div class="content-areas" id="about-content-area">
           <p>
@@ -48,11 +52,21 @@
         <div class="grid-subheading"><h2>Work</h2></div>
         <div class="content-areas">
           <div class="work-content">
-            <div class="project-1 project-grid-styles">Project-1</div>
-            <div class="project-2 project-grid-styles">Project-2</div>
-            <div class="project-3 project-grid-styles">Project-3</div>
-            <div class="project-4 project-grid-styles">Project-4</div>
-            <div class="project-5 project-grid-styles">Project-5</div>
+            <div class="project-1 project-grid-styles">
+              <div class="project-heading">Project-1</div>
+            </div>
+            <div class="project-2 project-grid-styles">
+              <div class="project-heading">Project-2</div>
+            </div>
+            <div class="project-3 project-grid-styles">
+              <div class="project-heading">Project-3</div>
+            </div>
+            <div class="project-4 project-grid-styles">
+              <div class="project-heading">Project-4</div>
+            </div>
+            <div class="project-5 project-grid-styles">
+              <div class="project-heading">Project-5</div>
+            </div>
           </div>
         </div>
       </section>
