updated navigation links to bold and hover effect, updated contact links to hover effect

--- a/starter/index.html
+++ b/starter/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Lernantino // Web Developer</title>
+    <title>Serkan Onal // Web Developer</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
 
@@ -12,12 +12,20 @@
     <!-- main logo / nav -->
     <header class="header">
       <nav class="nav-bar">
-        <h1>Serkan Onal Portfolio</h1>
+        <h1>Serkan Onal</h1>
         <div class="nav-links">
-          <p><a href="#about">About Me</a></p>
-          <p><a href="#work">Work</a></p>
-          <p><a href="#contact">Contact Me</a></p>
-          <p>Resume</p>
+          <p>
+            <a href="#about"><strong>About Me</strong></a>
+          </p>
+          <p>
+            <a href="#work"><strong>Work</strong></a>
+          </p>
+          <p>
+            <a href="#contact"><strong>Contact Me</strong></a>
+          </p>
+          <p>
+            <a href=""><strong>Resume</strong></a>
+          </p>
         </div>
       </nav>
     </header>
@@ -38,7 +46,7 @@
         <!-- <h2 class="grid-subheading">About Me</h2> -->
         <div class="grid-subheading"><h2>About Me</h2></div>
         <div class="content-areas" id="about-content-area">
-          <p>
+          <p id="about-me-content">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex
             blanditiis distinctio a error exercitationem minus. Et aliquid
             tempora rem illum suscipit repudiandae ducimus natus ipsum dolorum
@@ -53,19 +61,44 @@
         <div class="content-areas">
           <div class="work-content">
             <div class="project-1 project-grid-styles">
-              <div class="project-heading">Project-1</div>
+              <div class="project-heading">
+                <div class="project-card-container">
+                  <h4>Surf Report</h4>
+                  <h6>MERN Stack</h6>
+                </div>
+              </div>
             </div>
             <div class="project-2 project-grid-styles">
-              <div class="project-heading">Project-2</div>
+              <div class="project-heading">
+                <div class="project-card-container">
+                  <h4>LED Wall</h4>
+                  <h6>Node/ Iot</h6>
+                </div>
+              </div>
             </div>
             <div class="project-3 project-grid-styles">
-              <div class="project-heading">Project-3</div>
+              <div class="project-heading">
+                <div class="project-card-container">
+                  <h4>Calculator</h4>
+                  <h6>React/ JavaScript/ CSS</h6>
+                </div>
+              </div>
             </div>
             <div class="project-4 project-grid-styles">
-              <div class="project-heading">Project-4</div>
+              <div class="project-heading">
+                <div class="project-card-container">
+                  <h4>Pastel Puzzels</h4>
+                  <h6>MERN Stack</h6>
+                </div>
+              </div>
             </div>
             <div class="project-5 project-grid-styles">
-              <div class="project-heading">Project-5</div>
+              <div class="project-heading">
+                <div class="project-card-container">
+                  <h4>Run Buddy</h4>
+                  <h6>HTML/ CSS</h6>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -76,10 +109,18 @@
         <div class="grid-subheading"><h2>Contact Me</h2></div>
         <div class="content-areas" id="contact-content-area">
           <div class="contact-links">
-            <p>Tel: 07852736704</p>
-            <p>Email: onalserkan@gmail.com</p>
-            <p>Github</p>
-            <p>Twitter</p>
+            <p>
+              <span><strong>Tel:</strong></span> 07852736704
+            </p>
+            <p>
+              <span><strong>Email:</strong></span
+              ><a href="mailto:onalserkan@googlemail.com"
+                >onalserkan@gmail.com</a
+              >
+            </p>
+
+            <p><a href="https://github.com/serk03">Github</a></p>
+            <p><a href="https://twitter.com/Serk_03">Twitter</a></p>
           </div>
         </div>
       </section>
