--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Serkan Onal // Web Developer</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="starter/css/style.css" />
   </head>
 
   <body>
@@ -33,7 +33,7 @@
     <!-- hero banner -->
     <section class="hero-banner">
       <div class="profile-pic">
-        <img src="./images/SerkanCircleImg.png" alt="" />
+        <img src="/starter/images/SerkanCircleImg.png" alt="" />
       </div>
       <div class="hero-banner-title">
         <h2>Find Out More Below!</h2>
