--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
     <!-- hero banner -->
     <section class="hero-banner">
       <div class="profile-pic">
-        <img src="/starter/images/SerkanCircleImg.png" alt="" />
+        <img
+          src="/starter/images/SerkanCircleImg.png"
+          alt="Serkan-Onal-Profile-Picture"
+        />
       </div>
       <div class="hero-banner-title">
         <h2>Find Out More Below!</h2>
