updated html Profile pic

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section class="hero-banner">
       <div class="profile-pic">
         <img
-          src="/starter/images/SerkanCircleImg.png"
+          src="./starter/images/SerkanCircleImg.png"
           alt="Serkan-Onal-Profile-Picture"
         />
       </div>
